[FIX] Fixes the wrong width of loginbox in sidebar.

--- a/statics/styles/style.css
+++ b/statics/styles/style.css
@@ -761,7 +761,7 @@ a:hover
 #sidebar form.profile dl
 {
     margin: 0;
-    width: 90%;
+    width: 95%;
 }
 
 #sidebar form.profile input,
